style.css
body{
    background: linear-gradient(to left, rgb(143, 55, 225), rgb(166, 101, 227));
}
input{
    border: 1px solid blueviolet;
    border-radius: 18px;
    padding: 10px 10px;
    margin: 10px;
    width: 180px;
    
}
.text__div{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
h1{
    font-family:Verdana, Geneva, Tahoma, sans-serif;
  
    margin-top: 60px;
    /* padding-left: 21%; */
    /* color: rgb(18, 5, 166); */
    color:rgb(211, 253, 2)


}
h2{
    /* font-family:'Times New Roman', Times, serif; */
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1.5rem;
    background-color: powderblue;
    /* display: block; */
    color:rgb(52, 12, 12);
    /* padding-left: 26%; */
    margin-top: 40px;
    margin-bottom: 25px;
    padding-top:15px;
    padding-bottom:15px;
    padding-left: 24.5%;
    padding-right: 24.5%;
}
.div__times{
    display: flex;
    justify-content: center;
    margin-top: 50px;

}
#shift-start:hover,#shift-end:hover, .input__shift-type:hover, #dropdown:hover{
/* transform: translateY(0.5px); */
/* border: 1px solid black; */
box-shadow: 1px 1px 2px black;
}
.div__submit{
   margin-top: 20px; 
display: flex ;
justify-content: center;
height: 60px;
}
/* .input__submit{
    /* background-color: rgb(71, 221, 71) ; */
    /* color:black; 
    font-size: 15px;
    font-weight: 550;
    background-color: rgb(61, 223, 244);;
    background-color: rgb(211, 253, 2);
    height: 45px;
}
.input__submit:hover{
    box-shadow: 1px 1px 2px black;
} */ 
label{
font-family:Georgia, 'Times New Roman', Times, serif;

}

button.submit{
    border-radius: 18px;
    padding: 12.5px 12.5px;
    margin: 7px;
    width: 180px;
    margin-top: 40px; 
    display: flex ;
    justify-content: center;
    height: 60px;
    border: 1px solid black;
    font-size: 15px;
    font-weight: 550;
    background-color: rgb(61, 223, 244);;
    background-color: rgb(211, 253, 2);
    height: 45px;
    /* transition: transform 0.1s ease; */
    color: black;
}
#dropdown{
    border: 1px solid blueviolet;
    border-radius: 18px;
    padding: 10px 10px;
    margin: 10px;
    width: 190px;
}
label{
    color: black; font-size: 18px; font-weight: 500;
}
button:hover{
    box-shadow: 1px 2px 5px black;

    font-weight: 650;
    cursor: pointer;
}
button:active{
    transform: translateY(1px);
}
.result__div{
    display: flex;
    justify-content: center;
    margin: 100px;
    margin-top: 80px;
    flex-direction: column;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    background-color: powderblue;
    background-color: whitesmoke;

padding-top: 30px;
padding-bottom: 30px;
padding-left: 80px;
padding-right: 80px;
color:rgb(140, 1, 140);
border-radius: 10px;
border: 1.5px solid black;

}
.result__div:hover{
    box-shadow: 1px 1px 10px black;
   
   
}
.result__text{
    /* font-family:Verdana, Geneva, Tahoma, sans-serif;
    background-color: powderblue;
    background-color: whitesmoke;
padding: 15px;
padding-left: 200px;
padding-right: 200px;
color:rgb(140, 1, 140);
border-radius: 10px;
border: 2px solid powderblue; */

}


button.Yes {
    margin: 7px;
    width: 80px;
    background-color: rgb(211, 253, 2);
    height: 30px;
    font-weight: 550;
    border-radius: 18px;
    margin-left: 20px ;
}
button.Yes:hover, button.No:hover{
    color: black;
    font-weight: 750;
    box-shadow: 0px 2px;
}
button.No{
    margin: 7px;
    width: 80px;
    background-color: rgba(248, 19, 23, 0.799);
    height: 30px;
    font-weight: 550;
    border-radius: 18px;
}

.another__calc--div{
    display:flex;
    justify-content: center;
    margin-top: 30px;
}
.another__calc{
    margin: 7px;
    width: 300px;
    background-color: rgb(211, 253, 2);
    color:rgb(15, 15, 15);
    height: 60px;
    font-weight: 600;
    border-radius: 28px;
    margin-left: 20px ;
    border: 2px solid black;
    font-weight: 600 ;
    margin-bottom: 0px;
    padding-bottom: 0px;
}
.another__calc:hover{
    font-weight: 800;
}
span.breakdown{
    color:red;
}

.yes-no__button{
    display: flex;
    justify-content: center;
}

@media (min-width: 300px) and (max-width: 1100px){

    h1{
        padding-left: 1rem;
        padding-right: 1rem;
        text-align:center;
    }
    h2{
        margin-top: 1rem;
        margin-bottom: 0;
        padding-left: 1rem;
        padding-right: 1rem;
        text-align:center;
    }
    
    .div__submit{
        margin-bottom: 70px;
        margin-top :0;
        
    }
    button.submit{
        font-size : 1.1rem;
        width: 74%;
        height: 3.6rem;
        padding-top: 18px;
        border-radius: 38px;
        border: 1px solid black;   
        font-weight: 600;
    }
    .div__times{
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 0;
    }
    #shift-start,#shift-end, #dropdown{
        width: 60%;
        /* height: 2rem; */
        padding: 15px;
        font-size: 1rem;
    }
    #dropdown{
        width: 70%;
        height: 3.7rem;
        font-size: 1rem;
    }
    label{
        padding-top: 18px;
        font-size: 1.5rem;
        font-weight: 500;
    }
    .result__div{
        margin: 1.5rem;
        padding: 1rem;
    }
    .result__text{
        padding: 0;
    }
   
    .another__calc--div{
        margin: 1.8rem;
        margin-top: 2.5rem;
        margin-bottom: 2.5rem;

    }
    .another__calc {
        font-size: 1rem;
    }
   
}

